# my_jepa

./: Cargo.toml  README.md  additional_texts.txt  sample_texts.txt  trained_model.json
src/: main.rs
