[package]
name = "my_jepa"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
rand = "0.8"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.28"
objc = "0.2"
cocoa = "0.25"